feat: initial commit
- Add initial Flask application setup and routes
- Add SQLite database configuration and model
- Add main CSS file for styling
- Add HTML templates for base layout and index page
- Add virtual environment setup files

--- a/html/HTML_The essentials/chickens.html
+++ b/html/HTML_The essentials/chickens.html
@@ -1,12 +1,73 @@
-<h1>Chicken</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<br>
-The <b>chicken</b>(Gallus gallus domesticus) is a large and round short-winged bird, domesticated from the red junglefowl of Southeast Asia around 8,000 years ago. Most chickens are raised for food, providing meat and eggs; others are kept as pets or for cockfighting.
+  <body>
+    <h1>Chicken</h1>
 
-<br>
+    <br />
+    The <b>chicken</b>(Gallus gallus domesticus) is a large and round
+    short-winged bird, domesticated from the red junglefowl of Southeast Asia
+    around 8,000 years ago. Most chickens are raised for food, providing meat
+    and eggs; others are kept as pets or for cockfighting.
 
-<p>
-    Chickens are common and widespread domestic animals, 
-    with a total population of 23.7 billion as of 2018, and an annual production of more than 50 billion birds. A hen bred for laying can produce over 300 eggs per year. 
-    There are numerous cultural references to chickens in folklore, religion, and literature.
-</p>
+    <br />
+
+    <p>
+      Chickens are common and widespread domestic animals, with a total
+      population of 23.7 billion as of 2018, and an annual production of more
+      than 50 billion birds. A hen bred for laying can produce over 300 eggs per
+      year. There are numerous cultural references to chickens in folklore,
+      religion, and literature.
+    </p>
+
+    <br />
+
+    <h2>Description</h2>
+
+    <p>
+      Chickens are relatively large birds, active by day. The body is round, the
+      legs are unfeathered in most breeds, and the wings are short.[17] Wild
+      junglefowl can fly; chickens and their flight muscles are too heavy to
+      allow them to fly more than a short distance.[18] Size and coloration vary
+      widely between breeds.[17] Adult chickens of both sexes have a fleshy
+      crest on their heads called a comb or cockscomb, and hanging flaps of skin
+      on either side under their beaks called wattles; combs and wattles are
+      more prominent in males. Some breeds have a mutation that causes extra
+      feathering under the face, giving the appearance of a beard.[19]
+    </p>
+
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, eius!
+      Distinctio, accusamus fugiat? Accusamus eos quos quisquam quas qui, sit,
+      eum dicta voluptates expedita reiciendis odio dolore, commodi voluptatem
+      neque. Officia, tempora cupiditate exercitationem, reiciendis nam,
+      dignissimos tenetur quidem asperiores earum in quas! Illum cum laboriosam
+      adipisci explicabo, a iusto, vel officia beatae voluptatem numquam dolores
+      suscipit dolore modi recusandae?
+    </p>
+
+    <ul>
+      <! -- Duplicate a line below the current line: Shift + Alt + Down -->
+      <li>ilike</li>
+      <li>ilike</li>
+      <li>ilike</li>
+      <li>ilike</li>
+      <li>
+        ilike
+        <ul>
+          <li>shalom</li>
+          <li>velicia</li>
+        </ul>
+      </li>
+    </ul>
+
+    <a href="https:"> Im a link </a>
+    <!--This is comment-->
+    <!-- -->
+  </body>
+</html>
